<resources>
    <string name="app_name">LetsCompete</string>
    <string name="title_activity_setting_">Setting_Activity</string>
    <!--
    This string is used for square devices and overridden by hello_world in
    values-round/strings.xml for round devices.
    -->
    <string name="hello_world">Hello Square World!</string>
    <string name="settings0">Change Profile Picture</string>
    <string name="settings1">Change Profile Dashboard</string>
    <string name="settings1des" />
    <string name="settings2">Change Username</string>
    <string name="settings2des" />
    <string name="settings3">Change Password</string>
    <string name="settings3des" />
    <string name="settings4">Log Out</string>
    <string name="register">Register</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="already_have_account_login">Already have account? Login</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="image_description">image_description</string>
    <string name="upload">Upload</string>
    <string name="choose">Choose</string>
    <string name="challenge_description">challenge_description</string>
    <string name="challenge_duration">challenge_duration</string>
    <string name="get_started_with_your_account">Get started with your account</string>
    <string name="forgot_password_recover">forgot_password_recover</string>
    <string name="challenge_title">Challenge Title</string>
    <string name="create_challenge">Create Challenge</string>
    <string name="start_typing">Start typing</string>
    <string name="generic_username">name</string>
    <string name="online">online</string>
    <string name="send">send</string>

    <!-- relate to LeaderBoard -->
    <string name="name_of_challenge">Name of Challenge</string>
    <string name="challenge_picture">The challenge picture</string>
    <string name="challenge_type_default">Type</string>
    <string name="change_challenge_btn_txt">Switch</string>
    <string name="refresh">Refresh</string>
    <string name="your_rank_title">Your Rank</string>
    <string name="duration">Duration</string>

    <!-- Relate to LeaderboardRow-->
    <string name ="rank">rank</string>
    <string name ="numberStat">0</string>
    <string name ="leader_stat">Stat</string>
    <string name ="profile_pic">Profile Picture</string>

    <!-- Relate to Settings-->
    <string name ="menu">menu</string>
    <string name ="submenu">submenu</string>

    <!-- Relate to Start Page-->
    <string name="register_intro">Get Started with your account</string>
    <string name="acquire_email">Enter Email address</string>
    <string name="acquire_pass">Enter your Password</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="already_have_an_account">already have an account</string>
    <string name="register_picture">Register Picture</string>
    <string name="title_login">Lets Compete</string>
    <string name="login_text">Login</string>
    <string name="email_address_login">Enter Email address</string>
    <string name="generic_email">example@email.com</string>
    <string name="greeting">Welcome back!</string>

    <!--Relate to createChallenge-->
    <string name="custom_img_des_create">Custom Image Description</string>
    <string name="start_date">Start Date</string>
    <string name="create">Create</string>
    <string name="generic_picture1">Generic Picture</string>


</resources>