<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.LoginActivity">

    <!-- TextView: Label Login-->
    <!--EditText: Input Email-->


    <TextView
        android:id="@+id/textView6"
        android:layout_width="234dp"
        android:layout_height="44dp"
        android:text="@string/greeting"
        android:gravity="center"
        android:textSize="30sp"
        android:textColor="@color/black"

        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.103" />

    <EditText
        android:id="@+id/emailEt"
        android:layout_width="294dp"
        android:layout_height="45dp"
        android:ems="10"
        android:textColor="@color/black"
        android:hint="@string/email_address_login"
        android:autofillHints="@string/generic_email"
        android:inputType="textEmailAddress"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView6"
        app:layout_constraintVertical_bias="0.09" />

    <EditText
        android:id="@+id/paswordEt"
        android:layout_width="294dp"
        android:layout_height="45dp"
        android:ems="10"
        android:hint="@string/acquire_pass"
        android:autofillHints="@string/password"
        android:textColor="@color/black"
        android:layout_marginTop="28dp"
        android:inputType="textPassword"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.49"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/emailEt" />

    <TextView
        android:id="@+id/recoverPassTv"
        android:layout_width="141dp"
        android:layout_height="17dp"
        android:layout_marginTop="16dp"
        android:gravity="end"
        android:textColor="@color/black"
        android:text="@string/forgot_password"
        android:textSize="15sp"
        app:layout_constraintBottom_toTopOf="@+id/loginBtn"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.801"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/paswordEt"
        app:layout_constraintVertical_bias="0.195" />

    <Button
        android:id="@+id/loginBtn"
        android:layout_width="192dp"
        android:layout_height="49dp"
        android:text="@string/login_text"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/paswordEt"
        app:layout_constraintVertical_bias="0.167" />

    <com.google.android.gms.common.SignInButton
        android:id="@+id/googleLoginBtn"
        android:layout_width="200dp"
        android:layout_height="49dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        app:cornerRadius="16dp"
        app:layout_constraintBottom_toTopOf="@+id/imageView6"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/loginBtn"
        app:layout_constraintVertical_bias="0.165" />

    <ImageView
        android:id="@+id/imageView6"
        android:layout_width="396dp"
        android:layout_height="144dp"
        android:contentDescription="@string/generic_picture1"

        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/loginBtn"
        app:layout_constraintVertical_bias="1.0"
        app:srcCompat="@drawable/loginregister" />



</androidx.constraintlayout.widget.ConstraintLayout>


