<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.RegisterActivity">

    <!-- TextView: Label Register-->
    <!--EditText: Input Email-->

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/get_started_with_your_account"
        android:textAlignment="center"

        android:layout_marginTop="100dp"
        android:textColor="@color/black"
        android:textSize="30sp" />

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:id="@+id/emailTIL">
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/emailEt"
            android:inputType="textEmailAddress"
            android:hint="@string/email"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_height="wrap_content"
            android:layout_width="match_parent"/>
    </com.google.android.material.textfield.TextInputLayout>
    <!--EditText: Input Password-->
    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:id="@+id/passwordTIL"
        android:layout_below="@id/emailTIL"
        app:passwordToggleEnabled="true">
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/paswordEt"
            android:inputType="textEmailAddress"
            android:hint="@string/password"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_height="wrap_content"
            android:layout_width="match_parent"/>
    </com.google.android.material.textfield.TextInputLayout>

    <!--Button: Register User-->
    <!--TextView: Click go to LoginActivity-->

    <Button
        android:id="@+id/registerBtn"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/passwordTIL"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="142dp"
        android:layout_marginTop="90dp"
        android:layout_marginEnd="138dp"
        android:background="@color/colorPrimary"
        android:text="@string/register"
        android:textColor="@color/colorSecondary"
        app:iconTint="#FFFFFF" />

    <TextView
        android:id="@+id/have_accountTv"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/already_have_account_login"
        android:textAlignment="center"
        android:layout_below="@+id/registerBtn"
        android:layout_marginTop="30dp"
        android:textColor="@color/colorPrimary"/>
</RelativeLayout>