<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragments.LeaderBoardFragment">

    <View
        android:id="@+id/topview"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="@color/colorSecondary"
        app:layout_constraintBottom_toTopOf="@+id/leaderviewborder1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_end="20dp" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline9"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_begin="20dp" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline8"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="731dp"
        android:orientation="horizontal"
        app:layout_constraintGuide_begin="10dp"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline10"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintGuide_end="20dp" />

    <TextView
        android:id="@+id/lChallenge"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="sans-serif-medium"
        android:text="@string/name_of_challenge"
        android:textColor="@color/colorPrimary"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="@+id/guideline9"
        app:layout_constraintTop_toTopOf="@+id/guideline8" />

    <ImageView
        android:id="@+id/lchallengePic"
        android:contentDescription="@string/challenge_picture"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_marginTop="5dp"
        android:src="@drawable/ic_profile_black"
        app:layout_constraintStart_toStartOf="@+id/guideline9"
        app:layout_constraintTop_toBottomOf="@+id/lChallenge" />

    <TextView
        android:id="@+id/ctype"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="28dp"
        android:fontFamily="sans-serif"
        android:text="@string/challenge_type_default"
        android:textColor="@color/colorPrimary"
        app:layout_constraintEnd_toStartOf="@+id/change_challenge_btn"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/lchallengePic"
        app:layout_constraintTop_toTopOf="@+id/lchallengePic" />

    <TextView
        android:id="@+id/cduration"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="sans-serif"
        android:text="@string/duration"
        android:textColor="@color/colorPrimary"
        app:layout_constraintBottom_toBottomOf="@+id/lchallengePic"
        app:layout_constraintEnd_toStartOf="@+id/change_challenge_btn"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/ctype"
        app:layout_constraintTop_toBottomOf="@+id/ctype" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="sans-serif"
        android:text="@string/your_rank_title"
        android:textColor="@color/colorPrimary"
        android:textSize="18sp"
        app:layout_constraintBottom_toTopOf="@+id/include"
        app:layout_constraintStart_toStartOf="@+id/guideline9"
        app:layout_constraintTop_toBottomOf="@+id/leaderviewborder1" />

    <View
        android:id="@+id/leaderviewborder1"
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:layout_marginTop="16dp"
        android:background="#EE5F02"

        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/lchallengePic"
        tools:layout_editor_absoluteX="0dp" />

    <View
        android:id="@+id/view4"
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:background="#EE5F02"

        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/textView4" />

    <View
        android:id="@+id/leaderviewborder2"
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:layout_marginTop="110dp"
        android:background="#EE5F02"

        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/lchallengePic" />

    <include
        android:id="@+id/include"
        layout="@layout/row_leaderboard"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintEnd_toStartOf="@+id/guideline6"
        app:layout_constraintStart_toStartOf="@+id/guideline9"
        app:layout_constraintTop_toBottomOf="@+id/textView4">

    </include>

    <View
        android:id="@+id/view3"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:background="@color/colorPrimaryVariant"
        app:layout_constraintBottom_toTopOf="@+id/leaderboard_list"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/leaderviewborder2" />

    <View
        android:id="@+id/view5"
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:background="@color/colorPrimary"
        app:layout_constraintBottom_toTopOf="@+id/leaderboard_list"
        app:layout_constraintStart_toStartOf="parent" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/leaderboard_list"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="7dp"
        android:background="@color/colorSecondary"
        app:layout_constraintBottom_toTopOf="@+id/guideline10"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/leaderviewborder2"
        />

    <ImageButton
        android:id="@+id/button"
        android:contentDescription="@string/refresh"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:background="@drawable/setting_custom"
        android:scaleType="fitXY"
        android:src="@drawable/ic_refresh_24px"
        app:layout_constraintBottom_toBottomOf="@+id/topview"
        app:layout_constraintEnd_toStartOf="@+id/guideline6"
        app:layout_constraintTop_toBottomOf="@+id/change_challenge_btn" />

    <Button
        android:id="@+id/change_challenge_btn"
        android:layout_width="88dp"
        android:layout_height="45dp"
        android:text="@string/change_challenge_btn_txt"
        android:textSize="12sp"
        app:layout_constraintEnd_toStartOf="@+id/guideline6"
        app:layout_constraintTop_toTopOf="@+id/guideline8" />

</androidx.constraintlayout.widget.ConstraintLayout>